--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "dotenv": "^8.2.0",
     "gatsby": "^3.0.1",
+    "gatsby-plugin-emotion": "^6.0.0",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
@@ -17,6 +20,12 @@
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-source-wordpress": "^5.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
+    "he": "^1.2.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "preact": "^10.5.12",
+    "preact-render-to-string": "^5.1.16",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
